# pet-projects-api

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/api/: __init__.py  auth.py  dependencies.py
app/api/v1/: __init__.py  projects.py  users.py
app/commands/: users.py  utils.py
app/core/: config.py  security.py
app/database/: __init__.py  config.py  session.py
app/exceptions/: __init__.py  exceptions.py  handlers.py
app/models/: __init__.py  project.py  user.py
app/repositories/: __init__.py  base.py  project.py  user.py
app/schemas/: __init__.py  project.py  user.py
app/services/: __init__.py  authentication.py  project.py  token.py  user.py
migrations/: env.py
migrations/versions/: 94791844faee_create_tables.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py
tests/api/v1/: test_projects.py  test_users.py
tests/commands/: test_users.py  test_utils.py
tests/core/: test_config.py
tests/models/: test_user.py
tests/repositories/: test_project.py  test_user.py
tests/services/: test_authentication.py  test_project.py  test_token.py  test_user.py
